# vyotiq-agent

./: .eslintrc.json  .gitignore  .markdownlint.json  CHANGELOG.md  CONTRIBUTING.md  DELIVERY_SUMMARY.md  DOCUMENTATION_COMPLETE.md  LICENSE  README.md  RELEASE_PACKAGE_SUMMARY.md  RELEASE_PUBLISHING_CHECKLIST.md  THIRD_PARTY_NOTICES.md  context.md  eslint.config.js  forge.config.ts  index.html  memory.md  new.md  package-lock.json  package.json  rules.md  tsconfig.json  ui.md  vite.main.config.ts  vite.preload.config.ts  vite.renderer.config.mjs  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: API.md  ARCHITECTURE.md  CODEBASE_ANALYSIS.md  DEVELOPMENT.md  DOCUMENTATION_SUMMARY.md  RELEASE_GUIDE.md  RELEASE_NOTES_v1.8.0.md  RELEASE_NOTES_v1.9.0.md  RELEASE_PROMPT.md  RENDERER_UI_ANALYSIS.md  TROUBLESHOOTING.md  agent.md  context.md  diff.md  file.md  mcp  prompt.md  tt.md
docs/assets/: .gitkeep  README.md
docs/releases/: v1.7.0.md
rust-backend/: .gitignore  Cargo.toml
rust-backend/src/: config.rs  embedder.rs  error.rs  indexer.rs  lang.rs  main.rs  search.rs  server.rs  state.rs  watcher.rs  workspace.rs
rust-backend/src/routes/: files.rs  health.rs  mod.rs  search.rs  workspace.rs
scripts/: debug_path.mjs  download-models.mjs  patch-node-gyp-vs2025.mjs  patch-onnx.mjs  publish-release.mjs
src/: index.css  main.ts  preload.ts
src/main/: git.ts  ipc.ts  logger.ts  rustSidecar.ts
src/main/agent/: claudeAuth.ts  imageGenerationPrompt.ts  index.ts  loopDetection.ts  metrics.ts  modelQuality.ts  orchestrator.ts  providerManager.ts  runExecutor.ts  sessionHealth.ts  sessionManagementHandler.ts  sessionManager.ts  settingsStore.ts  settingsValidation.ts  systemPrompt.ts  types.ts  (+3 more)
src/renderer/: App.tsx  main.tsx  vite-env.d.ts
src/shared/: ipcTypes.ts  types.ts
src/test/: setup.ts
(+862 files in other folders)
