[package]
name = "vyotiq-backend"
version = "0.1.0"
edition = "2024"
description = "High-performance Rust backend sidecar for Vyotiq AI agent system"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework + WebSocket
axum = { version = "0.8", features = ["ws", "json", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Futures utilities (WebSocket stream splitting)
futures-util = "0.3"

# Full-text search / indexing
tantivy = "0.25"

# File system watching with proper debouncing
notify = "8"
notify-debouncer-full = "0.7"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
tracing-appender = "0.2"

# Unique IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Concurrent data structures
dashmap = "6"

# SHA hashing for file change detection
sha2 = "0.10"

# Regex
regex = "1"

# Glob patterns
globset = "0.4"

# Ignore files (.gitignore)
ignore = "0.4"

# Path normalization
dunce = "1"

# Platform directories
dirs = "6"

# Embedding model — Qwen3-Embedding-0.6B via candle backend (2025 SOTA, decoder-only LLM embedder)
# The "qwen3" feature enables Qwen3TextEmbedding backed by candle (pure Rust, no ONNX).
fastembed = { version = "5", default-features = false, features = ["qwen3"] }
candle-core = "0.9"

# High-performance HNSW vector index
usearch = "2"

# Parallel iteration for indexing
rayon = "1.11"

# Faster Mutex/RwLock
parking_lot = "0.12"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
